Extend tests logging